# rust_cli_todo

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: main.rs
src/persistence/: persistence.rs
src/screens/: menu.rs  mod.rs  settings.rs  tasks.rs
src/system/: update.rs
src/ui/: home.rs  mod.rs  navigation.rs  screen.rs
